--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
       </section>
 
       <footer>
+	<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a>
       </footer>
 
     </div>
