Updated Chapter 1 and added Chapter 0

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -32,14 +32,19 @@ h1 {
 }
 
 h2 { 
-    font-size: 24px;
-    margin-bottom: 15px;
+    font-size: 32px;
+    margin-bottom: 18px;
 }
 
 h3 { 
-    font-size: 18px;
-    margin-bottom: 15px;
+    font-size: 22px;
+    margin-bottom: 18px;
 }
+
+h4 { 
+    font-size: 16px;
+    margin-bottom: 15px;
+    }
 
 p {
     margin-bottom: 25px;
