--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,11 +53,15 @@ h1 {
   margin-bottom: 15px;
 }
 h2 {
-  font-size: 24px;
-  margin-bottom: 15px;
+  font-size: 32px;
+  margin-bottom: 18px;
 }
 h3 {
-  font-size: 18px;
+  font-size: 22px;
+  margin-bottom: 18px;
+}
+h4 {
+  font-size: 16px;
   margin-bottom: 15px;
 }
 p { margin-bottom: 25px; }
