--- a/static/css/style.less
+++ b/static/css/style.less
@@ -78,7 +78,15 @@ ol {
     td { padding: 5px; border: 1px solid #CCC; background: #FFF; }
     td:first-child { font-weight: bold;}
 
+/* Specific Chapters */
+
+    #blocking img {
+	width: 300px;	
+    }
+
+
 }
+
 
 .note {
     .border-radius(20px);
