added links to tutorials, most are pdf files, from old ucbugg site

--- a/ucbugg/templates/index.html
+++ b/ucbugg/templates/index.html
@@ -15,4 +15,19 @@
 {% endfor %}
 </ol>
 
+<h2>Optional</h2>
+<ol>
+  <li><a href="http://ucbugg.berkeley.edu/files/Rigging.pdf">Creating your first skeleton</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/files/Rigging2.pdf">Controlling your first skeleton</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/files/charSet.pdf">Creating a character set</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/files/ucbugg_skinning.pdf">Skinning in Maya</a></li>
+  <li><a href="http://www.fullspectrumia.com/nerdsofparadise/evan/misc/facerig/index.html">Facial Rigging</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/files/AnimationTut.pdf">Intro to Animation in Maya</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/files/ucbugg_lighting.pdf">Lighting in Maya</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/files/expressions.pdf">Intro to Expressions</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/learn/doku.php?id=tutorials:scripting-howto">How to use scripts</a></li>
+  <li><a href="http://ucbugg.berkeley.edu/learn/doku.php?id=tutorials:useful-scripts">Useful Scripts</a></li>
+  
+</ol>
+
 {% endblock %}
